syntax = "proto3";
package threshca;

// ---- Requests/Responses (client <-> CA nodes) ----
message CRLRequest {}
message CRLResponse { repeated string revoked_serials = 1; bytes threshold_sig = 2; }

message OCSPRequest { string serial = 1; }
message OCSPResponse {
  enum Status { UNKNOWN=0; GOOD=1; REVOKED=2; }
  Status status = 1;
  bytes threshold_sig = 2;
}

message NodeSignReq { bytes tbs_cert = 1; string req_id = 2; }
message NodeSignResp {
  bool ok = 1;
  string msg = 2;
  bytes partial_sig = 3;
  uint32 node_index = 4;
}

message RevokeRequest { string serial = 1; }
message RevokeResponse { bool ok = 1; string msg = 2; }

// ---- Service (no aggregator) ----
service CANode {
  rpc SignPartial (NodeSignReq) returns (NodeSignResp);
  rpc Revoke (RevokeRequest) returns (RevokeResponse);
  rpc CRL (CRLRequest) returns (CRLResponse);
  rpc OCSP (OCSPRequest) returns (OCSPResponse);
}
